docs/api/qiskit/0.19/qiskit.quantum_info.ScalarOp.md
---
title: ScalarOp
description: API reference for qiskit.quantum_info.ScalarOp
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.ScalarOp
---

# ScalarOp

<span id="qiskit.quantum_info.ScalarOp" />

`ScalarOp(dims, coeff=1)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/scalar_op.py "view source code")

Scalar identity operator class.

This is a symbolic representation of an scalar identity operator on multiple subsystems. It may be used to initialize a symbolic scalar multiplication of an identity and then be implicitly converted to other kinds of operator subclasses by using the [`compose()`](qiskit.quantum_info.ScalarOp#compose "qiskit.quantum_info.ScalarOp.compose"), [`dot()`](qiskit.quantum_info.ScalarOp#dot "qiskit.quantum_info.ScalarOp.dot"), [`tensor()`](qiskit.quantum_info.ScalarOp#tensor "qiskit.quantum_info.ScalarOp.tensor"), [`expand()`](qiskit.quantum_info.ScalarOp#expand "qiskit.quantum_info.ScalarOp.expand") methods.

Initialize an operator object.

**Parameters**

*   **dims** (*int or tuple*) – subsystem dimensions.
*   **coeff** (*Number*) – scalar coefficient for the identity operator (Default: 1).

**Raises**

**QiskitError** – If the optional coefficient is invalid.

## Attributes

### atol

The default absolute tolerance parameter for float comparisons.

### coeff

Return the coefficient

### dim

Return tuple (input\_shape, output\_shape).

### num\_qubits

Return the number of qubits if a N-qubit operator or None otherwise.

### qargs

Return the qargs for the operator.

### rtol

The relative tolerance parameter for float comparisons.

## Methods

### \_\_call\_\_

<span id="qiskit.quantum_info.ScalarOp.__call__" />

`ScalarOp.__call__(qargs)`

Return a clone with qargs set

### \_\_mul\_\_

<span id="qiskit.quantum_info.ScalarOp.__mul__" />

`ScalarOp.__mul__(other)`

### add

<span id="qiskit.quantum_info.ScalarOp.add" />

`ScalarOp.add(other)`

Return the linear operator self + other.

DEPRECATED: use `operator + other` instead.

**Parameters**

**other** (*BaseOperator*) – an operator object.

**Returns**

the operator self + other.

**Return type**

BaseOperator

### adjoint

<span id="qiskit.quantum_info.ScalarOp.adjoint" />

`ScalarOp.adjoint()`

Return the adjoint of the operator.

### compose

<span id="qiskit.quantum_info.ScalarOp.compose" />

`ScalarOp.compose(other, qargs=None, front=False)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/scalar_op.py "view source code")

Return the composed operator.

**Parameters**

*   **other** (*BaseOperator*) – an operator object.
*   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].
*   **front** (*bool*) – If True compose using right operator multiplication, instead of left multiplication \[default: False].

**Returns**

The operator self @ other.

**Return type**

BaseOperator

**Raises**

**QiskitError** – if other has incompatible dimensions for specified subsystems.

#### Additional Information:

Composition (`@`) is defined as left matrix multiplication for matrix operators. That is that `A @ B` is equal to `B * A`. Setting `front=True` returns right matrix multiplication `A * B` and is equivalent to the [`dot()`](qiskit.quantum_info.ScalarOp#dot "qiskit.quantum_info.ScalarOp.dot") method.

### conjugate

<span id="qiskit.quantum_info.ScalarOp.conjugate" />

`ScalarOp.conjugate()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/scalar_op.py "view source code")

Return the conjugate of the operator.

### copy

<span id="qiskit.quantum_info.ScalarOp.copy" />

`ScalarOp.copy()`

Make a deep copy of current operator.

### dot

<span id="qiskit.quantum_info.ScalarOp.dot" />

`ScalarOp.dot(other, qargs=None)`

Return the right multiplied operator self \* other.

**Parameters**

*   **other** (*BaseOperator*) – an operator object.
*   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].

**Returns**

The operator self \* other.

**Return type**

BaseOperator

**Raises**

**QiskitError** – if other cannot be converted to an operator, or has incompatible dimensions for specified subsystems.

### expand

<span id="qiskit.quantum_info.ScalarOp.expand" />

`ScalarOp.expand(other)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/scalar_op.py "view source code")

Return the tensor product operator other ⊗ self.

**Parameters**

**other** (*BaseOperator*) – an operator object.

**Returns**

if other is an ScalarOp. BaseOperator: if other is not an ScalarOp.

**Return type**

[ScalarOp](qiskit.quantum_info.ScalarOp "qiskit.quantum_info.ScalarOp")

### input\_dims

<span id="qiskit.quantum_info.ScalarOp.input_dims" />

`ScalarOp.input_dims(qargs=None)`

Return tuple of input dimension for specified subsystems.

### is\_unitary

<span id="qiskit.quantum_info.ScalarOp.is_unitary" />

`ScalarOp.is_unitary(atol=None, rtol=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/scalar_op.py "view source code")

Return True if operator is a unitary matrix.

### multiply

<span id="qiskit.quantum_info.ScalarOp.multiply" />

`ScalarOp.multiply(other)`

Return the linear operator other \* self.

DEPRECATED: use `other * operator` instead.

**Parameters**

**other** (*complex*) – a complex number.

**Returns**

the linear operator other \* self.

**Return type**

BaseOperator

**Raises**

**NotImplementedError** – if subclass does not support multiplication.

### output\_dims

<span id="qiskit.quantum_info.ScalarOp.output_dims" />

`ScalarOp.output_dims(qargs=None)`

Return tuple of output dimension for specified subsystems.

### power

<span id="qiskit.quantum_info.ScalarOp.power" />

`ScalarOp.power(n)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/scalar_op.py "view source code")

Return the power of the ScalarOp.

**Parameters**

**n** (*Number*) – the exponent for the scalar op.

**Returns**

the `coeff ** n` ScalarOp.

**Return type**

[ScalarOp](qiskit.quantum_info.ScalarOp "qiskit.quantum_info.ScalarOp")

**Raises**

**QiskitError** – if the input and output dimensions of the operator are not equal, or the power is not a positive integer.

### reshape

<span id="qiskit.quantum_info.ScalarOp.reshape" />

`ScalarOp.reshape(input_dims=None, output_dims=None)`

Return a shallow copy with reshaped input and output subsystem dimensions.

#### Arg:

#### input\_dims (None or tuple): new subsystem input dimensions.

If None the original input dims will be preserved \[Default: None].

#### output\_dims (None or tuple): new subsystem output dimensions.

If None the original output dims will be preserved \[Default: None].

**Returns**

returns self with reshaped input and output dimensions.

**Return type**

BaseOperator

**Raises**

**QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.

### set\_atol

<span id="qiskit.quantum_info.ScalarOp.set_atol" />

`classmethod ScalarOp.set_atol(value)`

Set the class default absolute tolerance parameter for float comparisons.

### set\_rtol

<span id="qiskit.quantum_info.ScalarOp.set_rtol" />

`classmethod ScalarOp.set_rtol(value)`

Set the class default relative tolerance parameter for float comparisons.

### subtract

<span id="qiskit.quantum_info.ScalarOp.subtract" />

`ScalarOp.subtract(other)`

Return the linear operator self - other.

DEPRECATED: use `operator - other` instead.

**Parameters**

**other** (*BaseOperator*) – an operator object.

**Returns**

the operator self - other.

**Return type**

BaseOperator

### tensor

<span id="qiskit.quantum_info.ScalarOp.tensor" />

`ScalarOp.tensor(other)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/scalar_op.py "view source code")

Return the tensor product operator self ⊗ other.

**Parameters**

**other** (*BaseOperator*) – an operator object.

**Returns**

if other is an ScalarOp. BaseOperator: if other is not an ScalarOp.

**Return type**

[ScalarOp](qiskit.quantum_info.ScalarOp "qiskit.quantum_info.ScalarOp")

### to\_matrix

<span id="qiskit.quantum_info.ScalarOp.to_matrix" />

`ScalarOp.to_matrix()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/scalar_op.py "view source code")

Convert to a Numpy matrix.

### to\_operator

<span id="qiskit.quantum_info.ScalarOp.to_operator" />

`ScalarOp.to_operator()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/scalar_op.py "view source code")

Convert to an Operator object.

### transpose

<span id="qiskit.quantum_info.ScalarOp.transpose" />

`ScalarOp.transpose()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/scalar_op.py "view source code")

Return the transpose of the operator.

